# SternaLite

./: .gitignore  README.md
sterna/: .gitignore  .qmake.stash  Baza.db  CMakeLists.txt  CMakeUserPresets.json  Log.cpp  Makefile  chelperclass.cpp  chelperclass.h  main.cpp  qAnalitikaArtikliwidget.cpp  qAnalitikaKomintentiwidget.ui  qEmployelista.cpp  qEmployevnes.h  qPriemwidget.ui  qartiklikorekcija.cpp  qbankivnes.cpp  qddvlista.cpp  qddvlista.ui  qdnevenpromet.ui  qdnevenprometwidget.cpp  qfakturikorekcija.ui  qfakturivlezni.h  qfakturivnes.cpp  qfiscalform.cpp  qizjavakorekcija.cpp  qizjavakorekcija.ui  qizjavalista.h  qizjavalista.ui  qizjavavnes.ui  qizleznifaktmasterkorekcija.cpp  qizleznifaktmasterlista.cpp  qizleznifakturikorekcija.cpp  qizleznifakturilista.cpp  qizleznifakturivnes.cpp  qizlezniispratnicikorekcija.cpp  qizlezniispratnicilista.cpp  qizleznipovratnicamastervnes.cpp  qizleznismetkikorekcija.cpp  qizleznismetkikorekcija.ui  (+180 more)
sterna/release/: moc_chelperclass.cpp  moc_qAnalitikaArtikli.cpp  moc_qAnalitikaArtikliwidget.cpp  moc_qAnalitikaKomintenti.cpp  moc_qAnalitikaKomintentiwidget.cpp  moc_qEmployekorekcija.cpp  moc_qEmployelista.cpp  moc_qEmployevnes.cpp  moc_qFinAnalitikaKomintenti.cpp  moc_qFinAnalitikaKomintentiwidget.cpp  moc_qPriem.cpp  moc_qPriemwidget.cpp  moc_qartiklikorekcija.cpp  moc_qartiklivnes.cpp  moc_qbanki.cpp  moc_qbankikorekcija.cpp  moc_qbankilista.cpp  moc_qbankivnes.cpp  moc_qddv.cpp  moc_qddvkorekcija.cpp  moc_qddvlista.cpp  moc_qddvvnes.cpp  moc_qdnevenpromet.cpp  moc_qdnevenprometwidget.cpp  moc_qfakturikorekcija.cpp  moc_qfakturilista.cpp  moc_qfakturivlezni.cpp  moc_qfakturivnes.cpp  moc_qfiscalform.cpp  moc_qizjavakorekcija.cpp  moc_qizjavalista.cpp  moc_qizjavavnes.cpp  moc_qizleznifaktmasterkorekcija.cpp  moc_qizleznifaktmasterlista.cpp  moc_qizleznifaktmastervnes.cpp  moc_qizleznifakturikorekcija.cpp  moc_qizleznifakturilista.cpp  moc_qizleznifakturivnes.cpp  moc_qizlezniispratnicikorekcija.cpp  moc_qizlezniispratnicilista.cpp  (+84 more)
sterna/release/qt/: qtvars.xml
sterna/release/sterna.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  sterna.lastbuildstate  sterna.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
sterna/src/: main.cpp  sterna.cpp  sterna.h  sterna.ui
sterna/src/AnalitikaKomintenti/: qAnalitikaKomintentiwidget.cpp
sterna/src/Artikli/: qartikli.cpp  qartikli.h  qartiklivnes.cpp  qmyartiklilista.cpp
sterna/src/Banki/: qbankikorekcija.cpp  qbankilista.cpp
sterna/src/Base/: qleft.cpp  qleft.ui  qmybaseformwidget.cpp  qmybaseformwidget.h  qmybasewidget.h  qsingleton.h
sterna/src/DDV/: qddvkorekcija.ui  qddvvnes.ui
sterna/src/DnevenPromet/: qdnevenprometwidget.ui
sterna/src/Employee/: qEmployekorekcija.cpp  qEmployevnes.cpp
sterna/src/Fakturi/: qfakturikorekcija.cpp  qfakturilista.cpp  qfakturilista.ui  qfakturivnes.ui
sterna/src/FakturiVlezni/: qfakturivlezni.h
(+71 files in other folders)
